curd operator
