# src/services/operators/operator.dto.ts
@@ -1,0 +1,4 @@
+export type UpdateOperator = {
+    firstName: string;
+    lastName: string;
+}
